@@ -85,6 +85,22 @@ Import-Package: com.ctc.wstx.api;version="4.2.0",
  javax.xml.ws.soap,
  javax.xml.ws.spi,
  javax.xml.ws.wsaddressing,
+ org.apache.commons.codec,
+ org.apache.commons.codec.binary,
+ org.apache.commons.codec.digest,
+ org.apache.commons.codec.language,
+ org.apache.commons.codec.language.bm,
+ org.apache.commons.codec.net,
+ org.apache.commons.lang,
+ org.apache.commons.lang.builder,
+ org.apache.commons.lang.enum,
+ org.apache.commons.lang.enums,
+ org.apache.commons.lang.exception,
+ org.apache.commons.lang.math,
+ org.apache.commons.lang.mutable,
+ org.apache.commons.lang.reflect,
+ org.apache.commons.lang.text,
+ org.apache.commons.lang.time,
  org.apache.commons.logging,
  org.apache.log4j,
  org.apache.log4j.helpers,
